kubernetes/hello-world/deployments.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx
  namespace: hello-world
  labels:
    app: hello-world
    service: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
      service: nginx
  template:
    metadata:
      labels:
        app: hello-world
        service: nginx
    spec:
      containers:
        - name: nginx
          image: docker.pkg.github.com/nicolasramy/hello-world/nginx:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 20Mi
            limits:
              cpu: 50m
              memory: 100Mi
      imagePullSecrets:
        - name: regcred
