kubernetes/hello-world/services.yml
kind: Service
apiVersion: v1
metadata:
  name: nginx
  namespace: hello-world
  labels:
    app: hello-world
    service: nginx
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: hello-world
    service: nginx
