kubernetes/hello-world/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-world
  namespace: hello-world
  labels:
    app: hello-world
    service: nginx
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: hello-world.microk8s.tld
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
      - path: /rust
        backend:
          serviceName: nginx
          servicePort: 80
